feat: add event pedagogical registration blocks
